--- a/nginx-configure.html
+++ b/nginx-configure.html
@@ -118,7 +118,147 @@
       </div><!-- article -->
 
       <div class="article-content">
-      
+      <p>最近看了一本<a href="http://book.douban.com/subject/7564094/" title="豆瓣链接">《高性能Linux服务器构建实战》</a>，里面讲到Nginx，感觉以前使用nginx系统配置多不专业，一些要设置，都没有设置。<br/>
+现在整理一下，基本算是完整了。</p>
+
+<p>基本配置</p>
+
+<pre><code>#user  nobody;
+worker_processes  1;
+#error_log  logs/error.log;
+error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
+pid        logs/nginx.pid;
+events {
+    worker_connections  1024;
+}
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    log_format  main  &#39;$remote_addr - $remote_user [$time_local] &quot;$request&quot; &#39;
+                      &#39;$status $body_bytes_sent &quot;$http_referer&quot; &#39;
+                      &#39;&quot;$http_user_agent&quot; &quot;$http_x_forwarded_for&quot;&#39;;
+    access_log  logs/access.log  main;
+    sendfile        on;
+    #tcp_nopush     on;
+    #设置客户端连接保持活动的超时时间，超过这个时间，服务器关闭连接
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+    ##gzip压缩
+    #gzip  on;
+
+    #fastCGI优化(书上提到这个，目前我配置Nginx的时候没有设置优化，暂时不想深入这一块)
+    ##fastcgi缓存路径、目录结构等级、关键字区域存储时间、非活动删除时间
+    #fastcgi_path /usr/local/nginx/fastcgi_cache levels=1:2 keys_zone=TEST:10m inactive=5m;
+    ##连接到后端fastcgi超时时间
+    #fastcgi_connect_timeout 300;
+    #fastcgi_send_timeout 300;
+    #fastcgi_read_timeout 300;
+    #fastcgi_buffer_size 64k;
+    #fastcgi_buffers 4 64k;
+    #fastcgi_busy_buffers_size 128k;
+    #fastcgi_temp_file_write_size 128k;
+    #fastcgi_cache TEST;
+    #fastcgi_cache_valid 200 302 1h;
+    #fastcgi_cache_valid 301 1d;
+    #fastcgi_cache_valid any 1m;    
+
+    server {
+        listen       80;
+        server_name  localhost;
+        access_log  logs/host.access.log  main;
+        location / {
+            root   html;
+            index  index.html index.htm index.php;
+        }
+        #设置图片等静态文件的内容过期时间
+        #location ~ .*\.(gif|jpg|jpeg|png|bmp|ico|swf|flv|js|css)${
+        #    expires 30d;
+        #}
+        #设置upload、static文件的内容过期时间
+        #location ~ */(upload|status)/ {
+        #    root html;
+        #    expires 30d;
+        #}
+
+        #error_page  404              /404.html;
+        # redirect server error pages to the static page /50x.html
+        #error_page   500 502 503 504  /50x.html;
+        #location = /50x.html {
+        #    root   html;
+        #}
+
+        #PHP配置
+        #location ~ \.php$ {
+        #    root           html;
+        #    fastcgi_pass   127.0.0.1:9000;
+        #    fastcgi_index  index.php;
+        #    fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        #    include        fastcgi_params;
+        #}
+
+    }
+
+    #include /usr/nginx/conf/vhosts/www.domain2.com.conf;
+}
+</code></pre>
+
+<p>这里用到了include指令，其中<code>/usr/nginx/conf/vhosts/www.domain2.com.conf</code>的内容为：    </p>
+
+<pre><code>server {
+    listen 80;
+    server_name www.domain2.com;
+    access_log logs/domain2.access.log main;
+    location / {
+        index index.html;
+        root html/domain2.com/;
+    }
+}
+</code></pre>
+
+<p>https配置   </p>
+
+<pre><code>    # HTTPS server
+    #
+    #server {
+    #    listen       443 ssl;
+    #    server_name  localhost;
+    #    ssl_certificate      cert.pem;
+    #    ssl_certificate_key  cert.key;
+
+    #    ssl_session_cache    shared:SSL:1m;
+    #    ssl_session_timeout  5m;
+
+    #    ssl_ciphers  HIGH:!aNULL:!MD5;
+    #    ssl_prefer_server_ciphers  on;
+    #    location / {
+    #        root   html;
+    #        index  index.html index.htm;
+    #    }
+    #}
+</code></pre>
+
+<p>防盗链配置</p>
+
+<pre><code>#针对文件名后缀设置防盗链    
+location ~* \.(jpg|gif|png|swf|flv|wma|wmv|asf|mp3|mmf|zip|rar)$ {
+    valid_referers none blocked *.lidong.me lidong.me;
+    if ($invalid_referer) { 
+        rewrite ^/ http://www.lidong.me/img/error.gif;
+        #return 403;
+    }
+}
+#对目录设置防盗链
+location /images {
+root html;
+    valid_referers none blocked *.lidong.me lidong.me;
+    if ($invalid_referer) {
+        return 403;
+        }
+    }
+}     
+</code></pre>
+
       </div>
 
       <div class="row">
