--- a/collect.html
+++ b/collect.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
     
-  关于 - Lidong's notes
+  收藏夹 - Lidong's notes
   
   </title>
   
@@ -93,7 +93,7 @@
         <section id="main-content" role="main" class="scroll-container">
  <script type="text/javascript">
 	$(function(){
-		var currentURL = 'about.html';
+		var currentURL = 'collect.html';
 		currentURL = currentURL.substr(0,currentURL.length-5);
 		$('#menu_item_'+currentURL).addClass('is_active');
 	});
@@ -101,20 +101,12 @@
 <div class="row">
 
     <div id="single-page-wrap">
-        <h1>关于</h1>
+        <h1>收藏夹</h1>
 
         <div class="markdown-body post-page">
-        <p>这是我的笔记本，使用 <a href="http://zh.mweb.im">Mweb</a> 创建。<br/>
-时常整理一些笔记，杂七杂八的内容，比较乱，将就看吧。<br/>
-因为软件本身比较方便发布分享，于是也贴在网上。</p>
+        <h2 id="toc_0">工具</h2>
 
-<p>关于我的更多信息</p>
-
-<p>Github：<a href="http://github.com/dooonooo">http://github.com/dooonooo</a><br/>
-Weibo：<a href="http://weibo.com/u/2727577442">http://weibo.com/u/2727577442</a><br/>
-Site:  <a href="http://www.lidong.me">http://www.lidong.me</a><br/>
-Email: <script type="text/javascript"> document.write(<q><a href="mailto:hi@lidong.me">hi@lidong.me</a></q>); </script> &amp;&amp;<br/>
- <script type="text/javascript"> document.write(<q>lidongnet9gmail</q>); </script></p>
+<p><a href="http://jsbin.com/"> JS Bin</a> 在线html、css、js编辑工具</p>
 
         </div>
     </div>
