--- a/collect.html
+++ b/collect.html
@@ -112,6 +112,16 @@
 
 <p><a href="http://jsbin.com/"> JS Bin</a> 在线html、css、js编辑工具</p>
 
+<p><a href="http://www.css88.com/doc/zeptojs_api/">zeptojs中文文档</a></p>
+
+<h2 id="toc_1">emoji相关</h2>
+
+<p>表情以及对应的代码 <a href="http://www.emoji-cheat-sheet.com/">http://www.emoji-cheat-sheet.com/</a></p>
+
+<h2 id="toc_2">其他</h2>
+
+<p>榨干那些网盘/视频 - API  <a href="http://zg.yangsifa.com/">http://zg.yangsifa.com/</a></p>
+
         </div>
     </div>
 </div>              
